<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:id="@+id/wifidialog_layout"
    android:background="@drawable/wifiactivity_bg" >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/wifi_connection"
        android:textColor="#FFFFFF"
        android:id="@+id/dialogtittle"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/dialogtittle"
        android:id="@+id/wifidialog_namelayout">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/wifi_name_message"
			android:textColor="#FFFFFF"
			android:textSize="20sp"
			android:layout_marginLeft="10dp"
		    android:id="@+id/wifidialog_name"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/wifidialog_lin1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/wifidialog_namelayout">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_password"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:textSize="20sp"
			android:hint="@string/wifi_password_message"
			android:password="true"
			android:singleLine="true"
			android:layout_marginLeft="10dp"
		    android:id="@+id/wifi_dialog_password"/>
    </LinearLayout>
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/wifidialog_lin1"
        android:layout_marginTop="35dp">
        <Button 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:id="@+id/wifi_dialog_cancel"
            android:textSize="20sp"/>
        <Button 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wifi_connect"
            android:id="@+id/wifi_dialog_connect"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>
