<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">


    <com.jacky.compatible.launcher.views.TitleView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_bluetooth"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_alignLeft="@+id/setting_custom_rl"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/setting_custom_rl" />

    <RelativeLayout
        android:id="@+id/setting_custom_rl"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/about_bg">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/setting_custom_wifi"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/wireless_network"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/sel_focus"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/setting_custom_ethernet"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/wired_network"
                android:background="@drawable/sel_focus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/setting_custom_bluetooth"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/bluettoth"
                android:background="@drawable/sel_focus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/setting_custom_net_detection"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/network_speed_measurement"
                android:background="@drawable/sel_focus"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>